--- a/Angular/client-app/src/app/app.component.html
+++ b/Angular/client-app/src/app/app.component.html
@@ -2,6 +2,6 @@
     <div class="col col-lg-12">
         <app-navbar></app-navbar>
         <router-outlet></router-outlet>
-        <clock-component></clock-component>
+        <!--<clock-component></clock-component>-->
     </div>
 </div>
