--- a/Angular/client-app/src/app/login/login.component.html
+++ b/Angular/client-app/src/app/login/login.component.html
@@ -19,19 +19,7 @@
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col col-lg-4">
-                <div *ngIf="email.errors && (email.dirty || email.touched)"
-                      class="alert alert-danger">  
-                    <div [hidden]="!email.errors.required">
-                      Email is required!
-                    </div>
-                    <div [hidden]="!email.errors.pattern">
-                      Email form is invalid (example jondoe@gmail.com)
-                    </div>
-                </div>
-              </div>
-            </div>
+
             <div class="row">
               <div class="col col-lg-4"> 
                 <div class="input-group">
@@ -40,23 +28,14 @@
                 </div>
               </div>
             </div>
-            <div *ngIf="password.errors && (password.dirty || password.touched)"
-           class="alert alert-danger">  
-              <div [hidden]="!password.errors.required">
-                Password is required!
-              </div>
-              <div [hidden]="!password.errors.minlength">
-                Password min length is 7 characters.
-              </div>
-              <div [hidden]="!password.errors.maxlength">
-                Password max length is 42 characters.
-              </div>
-            </div>
+
             <br>
             <div>
-                <button type="submit" class="btn btn-success" [disabled]="!f.valid">
+                <button type="submit" class="btn btn-success">
                     <span class="glyphicon glyphicon-ok"></span>
                 </button>
+                <button (click)="callGet()">Get method</button>
+                <button (click)="callPost()">Post method</button>
             </div>
           </form>
         </div>
