--- a/Angular/client-app/src/app/navbar/navbar.component.html
+++ b/Angular/client-app/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" >
   <div class="col col-md-12">
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
@@ -6,12 +6,13 @@
           <a class="navbar-brand" [routerLink]="['/']">Rent a car</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a [routerLink]="['/addVehicle']">Add Vehicle</a></li>
-          <li><a [routerLink]="['/addService']">Add Service</a></li>
+          <li><a *ngIf="checkIfLogged()" [routerLink]="['/addVehicle']">Add Vehicle</a></li>
+          <li><a *ngIf="checkIfLogged()" [routerLink]="['/addService']">Add Service</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a [routerLink]="['/register']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-          <li><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <li *ngIf="!checkIfLogged()"><a [routerLink]="['/register']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+          <li *ngIf="!checkIfLogged()"><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <li *ngIf="checkIfLogged()"><a role="button" (click)="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
       </div>
     </nav>
