Added user roles and minor fixes

--- a/Angular/client-app/src/app/navbar/navbar.component.html
+++ b/Angular/client-app/src/app/navbar/navbar.component.html
@@ -6,13 +6,13 @@
           <a class="navbar-brand" [routerLink]="['/']">Rent a car</a>
         </div>
         <ul class="nav navbar-nav">
-          <li><a *ngIf="checkIfLogged()" [routerLink]="['/addVehicle']">Add Vehicle</a></li>
-          <li><a *ngIf="checkIfLogged()" [routerLink]="['/addService']">Add Service</a></li>
+          <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addVehicle']">Add Vehicle</a></li>
+          <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addService']">Add Service</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li *ngIf="!checkIfLogged()"><a [routerLink]="['/register']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
           <li *ngIf="!checkIfLogged()"><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-          <li *ngIf="checkIfLogged()"><a role="button" (click)="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+          <li *ngIf="checkIfLogged()"><a [routerLink]="['/login']" role="button" (click)="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
       </div>
     </nav>
