--- a/Angular/client-app/src/app/add-service/add-service.component.html
+++ b/Angular/client-app/src/app/add-service/add-service.component.html
@@ -61,7 +61,7 @@
   <div class="form-group">
     <label class="col-md-4 control-label" for="addServiceButton"></label>
     <div class="col-md-4">
-      <button type="submit" id="addServiceButton" name="addServiceButton" class="btn btn-success">Add Service</button>
+      <button type="submit" id="addServiceButton" name="addServiceButton" class="btn btn-success" [disabled]="!f.valid">Add Service</button>
     </div>
   </div>
   
