--- a/Angular/client-app/src/app/add-branch/add-branch.component.html
+++ b/Angular/client-app/src/app/add-branch/add-branch.component.html
@@ -1,13 +1,22 @@
 
-<form class="form-horizontal" #f="ngForm" (ngSubmit)="onSubmit(f)">
-    <fieldset>
+<form class="form-horizontal" #f="ngForm" (ngSubmit)="onSubmit(f.value, f)">
+    <fieldset *ngIf="checkIfLogged()">
     
     <!-- Form Name -->
-    <legend>Add branch:</legend>
+    <legend>Add branch</legend>
     
+    <div class="form-group">
+        <label class="col-md-4 control-label" for="textinput">Service:</label>  
+        <div class="col-md-4">
+            <select id="ServiceName" ngModel #ServiceName="ngModel" name="ServiceName" class="form-control">
+              <option *ngFor = "let item of services" [value]="item.Name" id="ServiceName" name="ServiceName">{{item.Name}}</option>
+            </select>
+          </div>
+      </div>
+
     <!-- File Button --> 
     <div class="form-group">
-      <label class="col-md-4 control-label" for="filebutton">Picture</label>
+      <label class="col-md-4 control-label" for="filebutton">Picture:</label>
       <div class="col-md-4">
         <input id="filebutton" name="filebutton" class="input-file" type="file">
       </div>
@@ -17,19 +26,19 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="textinput">Adress:</label>  
       <div class="col-md-4">
-      <input id="adress" name="adress" type="text" placeholder="" class="form-control input-md" ngModel required #adress="ngModel">    
+      <input id="address" name="address" type="text" placeholder="" class="form-control input-md" ngModel required #address="ngModel">    
       </div>
     </div>
     
     <div class="row">
       <div class="col col-lg-4 col-lg-push-4">
-        <div *ngIf="adress.errors && (adress.dirty || adress.touched)"
+        <div *ngIf="address.errors && (address.dirty || address.touched)"
               class="alert alert-danger">  
-            <div [hidden]="!adress.errors.required">
-              Adress is required!
+            <div [hidden]="!address.errors.required">
+                Address is required!
             </div>
-            <div [hidden]="!adress.errors.pattern">
-              Adress form is invalid
+            <div [hidden]="!address.errors.pattern">
+                Address form is invalid
             </div>
         </div>
       </div>
@@ -78,12 +87,12 @@
         </div>
       </div>
     </div>
-    
+
     <!-- Button -->
     <div class="form-group">
       <label class="col-md-4 control-label" for="singlebutton"></label>
       <div class="col-md-4">
-        <button type="submit" id="singlebutton" name="singlebutton" class="btn btn-success" [disabled]="!f.valid">Add</button>
+        <button type="submit" id="singlebutton" name="singlebutton" class="btn btn-success" [disabled]="!f.valid">Add Branch</button>
       </div>
     </div>
     
