Picture upload on server

--- a/Angular/client-app/src/app/add-service/add-service.component.html
+++ b/Angular/client-app/src/app/add-service/add-service.component.html
@@ -23,13 +23,15 @@
     </div>
   </div>
   
+  <form #form = "ngForm" class="groove">
   <!-- File Button --> 
-  <div class="form-group">
     <label class="col-md-4 control-label" for="Logo">Logo</label>
-    <div class="col-md-4">
-      <input id="Logo" name="Logo" class="input-file" ngModel #Logo="ngModel" type="file">
-    </div>
-  </div>
+      <input type="file" name="photo" ng2FileSelect [uploader]="uploader" enctype = "multipart/form-data"/>
+      <button type="button" class ="btn btn-success btn-s"
+      (click)="uploader.uploadAll()"
+      [disabled] ="!uploader.getNotUploadedItems().length"></button>
+
+</form>
   
   <!-- Text input-->
   <div class="form-group">
