--- a/Angular/client-app/src/app/profile/profile.component.html
+++ b/Angular/client-app/src/app/profile/profile.component.html
@@ -2,11 +2,7 @@
     <div class="row">
       <div class="col col-lg-4 col-lg-push-4">
           <div class="row">
-            <h1>Sign Up</h1>
-          </div>
-  
-          <div class="row">
-            <p>Please fill in this form to create an account.</p>
+            <h1>Profile</h1>
           </div>
   
           <div class="row">
@@ -91,7 +87,7 @@
           </div>
   
           <br>
-            <button type="submit" class="btn btn-success" [disabled]="!f.valid">Sign Up</button>
+            <button type="submit" class="btn btn-success" [disabled]="!f.valid">Save Changes</button>
         </div>
     </div>
   </form>
