--- a/Angular/client-app/src/app/add-service/add-service.component.html
+++ b/Angular/client-app/src/app/add-service/add-service.component.html
@@ -72,7 +72,7 @@
   <table class="table table-striped table-dark" >
     <tbody *ngFor = "let item of services">
         <tr>
-            <td style="width: 250px;"><img width="200" src="assets/img/{{item.Logo}}" />Slika</td>
+            <td style="width: 250px;"><img width="200" src='{{item.Logo}}' />Slika</td>
             <td>Name: {{item.Name}}</td>
             <td>Email: {{item.Email}}</td>
             <td>Description: {{item.Description}}</td>
