Added branch logo upload and download

--- a/Angular/client-app/src/app/add-branch/add-branch.component.html
+++ b/Angular/client-app/src/app/add-branch/add-branch.component.html
@@ -14,13 +14,15 @@
           </div>
       </div>
 
-    <!-- File Button --> 
-    <div class="form-group">
-      <label class="col-md-4 control-label" for="filebutton">Picture:</label>
-      <div class="col-md-4">
-        <input id="filebutton" name="filebutton" class="input-file" type="file">
-      </div>
-    </div>
+    <form #form = "ngForm" class="groove">
+      <!-- File Button --> 
+        <label class="col-md-4 control-label" for="Logo">Logo</label>
+          <input type="file" name="photo" ng2FileSelect [uploader]="uploader" enctype = "multipart/form-data"/>
+          <button type="button" class ="btn btn-success btn-s"
+          (click)="uploader.uploadAll()"
+          [disabled] ="!uploader.getNotUploadedItems().length"></button>
+    
+    </form>
     
     <!-- Text input-->
     <div class="form-group">
