Added vehicle types, adding vehicle done, connected vehicles, typeOfVehicles and services in database

--- a/Angular/client-app/src/app/add-branch/add-branch.component.html
+++ b/Angular/client-app/src/app/add-branch/add-branch.component.html
@@ -17,7 +17,7 @@
     <form #form = "ngForm" class="groove">
       <!-- File Button --> 
         <label class="col-md-4 control-label" for="Logo">Logo</label>
-          <input type="file" name="photo" ng2FileSelect [uploader]="uploader" enctype = "multipart/form-data"/>
+          <input multiple type="file" name="photo" ng2FileSelect [uploader]="uploader" enctype = "multipart/form-data"/>
           <button type="button" class ="btn btn-success btn-s"
           (click)="uploader.uploadAll()"
           [disabled] ="!uploader.getNotUploadedItems().length"></button>
