--- a/Angular/client-app/src/app/add-vehicle/add-vehicle.component.html
+++ b/Angular/client-app/src/app/add-vehicle/add-vehicle.component.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" #f="ngForm" (ngSubmit)="onSubmit(f)">
+<form class="form-horizontal" #f="ngForm" (ngSubmit)="onSubmit(f.value, f)">
     <fieldset>
     
     <!-- Form Name -->
@@ -8,12 +8,21 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="selectbasic">Vehicle Type:</label>
       <div class="col-md-4">
-        <select id="type" name="type" class="form-control" ngModel #type="ngModel">
-          <option value="1">Option one</option>
-          <option value="2">Option two</option>
+        <select id="type" name="type" class="form-control" ngModel #TypeOfVehicle="ngModel">
+          <option *ngFor = "let item of typeOfVehicles" [value]="item.Name" id="type" name="type">{{item.Name}}</option>
         </select>
       </div>
     </div>
+
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="textinput">Service:</label>  
+      <div class="col-md-4">
+          <select id="Service" ngModel #Service="ngModel" name="Service" class="form-control">
+            <option *ngFor = "let item of services" [value]="item.Name" id="Service" name="Service">{{item.Name}}</option>
+          </select>
+        </div>
+    </div>
+
     
     <!-- Text input-->
     <div class="form-group">
@@ -41,19 +50,19 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="textinput">Manufacture:</label>  
       <div class="col-md-4">
-      <input id="manufacture" name="manufacture" type="text" placeholder="" class="form-control input-md" ngModel required #manufacture="ngModel">    
+      <input id="manufactor" name="manufactor" type="text" placeholder="" class="form-control input-md" ngModel required #manufactor="ngModel">    
       </div>
     </div>
   
     <div class="row">
       <div class="col col-lg-4 col-lg-push-4">
-        <div *ngIf="manufacture.errors && (manufacture.dirty || manufacture.touched)"
+        <div *ngIf="manufactor.errors && (manufactor.dirty || manufactor.touched)"
               class="alert alert-danger">  
-            <div [hidden]="!manufacture.errors.required">
-              Manufacture is required!
+            <div [hidden]="!manufactor.errors.required">
+              manufactor is required!
             </div>
-            <div [hidden]="!manufacture.errors.pattern">
-              Manufacture form is invalid
+            <div [hidden]="!manufactor.errors.pattern">
+              manufactor form is invalid
             </div>
         </div>
       </div>
@@ -82,12 +91,15 @@
     </div>
     
     <!-- File Button --> 
-    <div class="form-group">
-      <label class="col-md-4 control-label" for="filebutton">Pictures:</label>
-      <div class="col-md-4">
-        <input id="filebutton" name="filebutton" class="input-file" type="file">
-      </div>
-    </div>
+    <!-- <form #form = "ngForm" class="groove">
+      
+        <label class="col-md-4 control-label" for="Logo">Logo</label>
+          <input  type="file" multiple name="photo" ng2FileSelect [uploader]="uploader" enctype = "multipart/form-data"/>
+          <button type="button" class ="btn btn-success btn-s"
+          (click)="uploader.uploadAll()"
+          [disabled] ="!uploader.getNotUploadedItems().length"></button>
+    
+    </form> -->
     
     <!-- Textarea -->
     <div class="form-group">
