--- a/Angular/client-app/src/app/show-services/show-services.component.html
+++ b/Angular/client-app/src/app/show-services/show-services.component.html
@@ -1,10 +1,65 @@
 <table class="table table-striped table-dark" >
-  <tbody *ngFor = "let item of services">
+  <tbody *ngFor = "let item of services; let i = index">
       <tr>
-          <td style="width: 250px;"><img width="200" src='{{item.Logo}}' />Slika</td>
-          <td>Name: {{item.Name}}</td>
-          <td>Email: {{item.Email}}</td>
-          <td>Description: {{item.Description}}</td>
+          <td style="width: 250px;"><label class="col-md-4 control-label">Slika</label><img width="200" src='{{item.Logo}}' /></td>
+          <td><div class="form-group">
+                <label class="col-md-4 control-label" for="Email">E-mail</label>  
+                <div class="col-md-4">
+                <input id="Email" size="40" [(ngModel)]="item.Email" name="Email" type="text" ngModel required #Email="ngModel" class="form-control input-md"
+                pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$">
+                <div *ngIf="Email.errors && (Email.dirty || Email.touched)"
+                class="alert alert-danger">  
+                 <div [hidden]="!Email.errors.required">
+                   Email is required!
+                 </div>
+                 <div [hidden]="!Email.errors.pattern">
+                   Email form is invalid (example jondoe@gmail.com)
+                 </div>
+               </div>
+                </div>
+              </div>
+            </td>
+            <td><div class="form-group">
+                    <label class="col-md-4 control-label" for="textinput">Service Name</label>  
+                    <div class="col-md-4">
+                    <input id="Name" name="Name" type="text" [(ngModel)]="item.Name" ngModel #Name="ngModel" required minlength="6" maxlength="42" class="form-control input-md">
+                    <div *ngIf="Name.errors && (Name.dirty || Name.touched)" class="alert alert-danger">
+                      <div [hidden]="!Name.errors.required">
+                        Service name is required!
+                      </div>
+                      <div [hidden]="!Name.errors.minlength">
+                        Service name must be at least 6 characters long.
+                      </div>
+                      <div [hidden]="!Name.errors.maxlength">
+                        Service name cannot be more than 42 characters long.
+                      </div>
+                    </div>
+                    </div>
+                  </div>
+            </td>
+            <td><div class="form-group">
+                    <label class="col-md-4 control-label" for="Description">Description</label>
+                    <div class="col-md-4">                     
+                      <textarea class="form-control" [(ngModel)]="item.Description" id="Description" name="Description" ngModel #Description="ngModel"></textarea>
+                    </div>
+                  </div>
+            </td>
+          <td>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="singlebutton"></label>
+                        <div class="col-md-4">
+                            <button *ngIf="this.navbarComponent.checkIfLogged() && this.navbarComponent.checkUserType()" (click)="deleteService(item.Id)" id="singlebutton" name="singlebutton" class="btn btn-danger">Delete Service</button>
+                        </div>
+                </div>
+            </td>
+            <td>
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="singlebutton"></label>
+                        <div class="col-md-4">
+                            <button *ngIf="this.navbarComponent.checkIfLogged() && this.navbarComponent.checkUserType()" (click)="saveChanges(i)" id="singlebutton" name="singlebutton" class="btn btn-primary">Save Service</button>
+                        </div>
+                </div>
+            </td>
       </tr>
   </tbody>
 </table>
