--- a/Angular/client-app/src/app/add-service/add-service.component.html
+++ b/Angular/client-app/src/app/add-service/add-service.component.html
@@ -29,7 +29,7 @@
       <input type="file" multiple name="photo" ng2FileSelect [uploader]="uploader" enctype = "multipart/form-data"/>
       <button type="button" class ="btn btn-success btn-s"
       (click)="uploader.uploadAll()"
-      [disabled] ="!uploader.getNotUploadedItems().length"></button>
+      [disabled] ="!uploader.getNotUploadedItems().length">Add Logo Image</button>
 
 </form>
   
@@ -69,7 +69,7 @@
   
   </fieldset>
   </form>
-  <table class="table table-striped table-dark" >
+  <!--<table class="table table-striped table-dark" >
     <tbody *ngFor = "let item of services">
         <tr>
             <td style="width: 250px;"><img width="200" src='{{item.Logo}}' />Slika</td>
@@ -78,4 +78,4 @@
             <td>Description: {{item.Description}}</td>
         </tr>
     </tbody>
-</table>
+</table>-->
