--- a/Angular/client-app/src/app/add-vehicle/add-vehicle.component.html
+++ b/Angular/client-app/src/app/add-vehicle/add-vehicle.component.html
@@ -89,17 +89,38 @@
         </div>
       </div>
     </div>
+
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="textinput">Price Per Hour:</label>  
+      <div class="col-md-4">
+      <input id="pricePerHour" name="pricePerHour" type="text" placeholder="" class="form-control input-md" ngModel required #pricePerHour="ngModel">   
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col col-lg-4 col-lg-push-4">
+        <div *ngIf="pricePerHour.errors && (pricePerHour.dirty || pricePerHour.touched)"
+              class="alert alert-danger">  
+            <div [hidden]="!pricePerHour.errors.required">
+              Price per hour is required!
+            </div>
+            <div [hidden]="!pricePerHour.errors.pattern">
+              Price form is invalid
+            </div>
+        </div>
+      </div>
+    </div>
     
     <!-- File Button --> 
-    <!-- <form #form = "ngForm" class="groove">
+    <form #form = "ngForm" class="groove">
       
-        <label class="col-md-4 control-label" for="Logo">Logo</label>
+        <label class="col-md-4 control-label" for="Images">Images</label>
           <input  type="file" multiple name="photo" ng2FileSelect [uploader]="uploader" enctype = "multipart/form-data"/>
           <button type="button" class ="btn btn-success btn-s"
           (click)="uploader.uploadAll()"
-          [disabled] ="!uploader.getNotUploadedItems().length"></button>
+          [disabled] ="!uploader.getNotUploadedItems().length">Upload Images</button>
     
-    </form> -->
+    </form>
     
     <!-- Textarea -->
     <div class="form-group">
