--- a/Angular/client-app/src/app/navbar/navbar.component.html
+++ b/Angular/client-app/src/app/navbar/navbar.component.html
@@ -8,15 +8,16 @@
         <ul class="nav navbar-nav">
           <li><a [routerLink]="['/showServices']">Services</a></li>
           <li><a [routerLink]="['/showBranches']">Branches</a></li>
-          <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addBranch']">Add Branch</a></li>
+          <li><a [routerLink]="['/showVehicles']">Vehicles</a></li>
           <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addService']">Add Service</a></li>
+          <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addBranch']">Add Branch</a></li>
           <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addVehicle']">Add Vehicle</a></li>
           <li><a *ngIf="checkIfLogged() && checkUserType()" [routerLink]="['/addTypeOfVehicle']">Add Vehicle Type</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li *ngIf="!checkIfLogged()"><a [routerLink]="['/register']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
           <li *ngIf="!checkIfLogged()"><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-          <li><a *ngIf="checkIfLogged()" [routerLink]="['/profile']"><span class="glyphicon glyphicon-pencil"></span> Profile</a></li>
+          <li><a *ngIf="checkIfLogged() && !checkUserType()" [routerLink]="['/profile']"><span class="glyphicon glyphicon-pencil"></span> Profile</a></li>
           <li *ngIf="checkIfLogged()"><a [routerLink]="['/login']" role="button" (click)="logout()"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
         </ul>
       </div>
