--- a/Angular/client-app/src/app/show-services/show-services.component.html
+++ b/Angular/client-app/src/app/show-services/show-services.component.html
@@ -44,6 +44,7 @@
                     </div>
                   </div>
             </td>
+            <td *ngFor = "let im of item.Vehicles">{{im.Model}}</td>
           <td>
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="singlebutton"></label>
