--- a/Angular/client-app/src/app/profile/profile.component.html
+++ b/Angular/client-app/src/app/profile/profile.component.html
@@ -64,6 +64,65 @@
         
           <br>
             <button type="submit" class="btn btn-success" [disabled]="!f.valid">Save Changes</button>
+                
         </div>
     </div>
   </form>
+
+  <form #forma="ngForm" (ngSubmit)="onSubmitPassword(forma.value, forma)">
+      <div class="row">
+          <div class="col col-lg-4 col-lg-push-4">
+      <div class="form-group">
+          <label for="OldPassword">Old Password</label>
+          <input type="Password" placeholder="Old Password" class="form-control" name="OldPassword" ngModel required minlength="7" maxlength="42" #OldPassword="ngModel">
+          <div *ngIf="OldPassword.errors && (OldPassword.dirty || OldPassword.touched)"
+           class="alert alert-danger">  
+            <div [hidden]="!OldPassword.errors.required">
+              Password is required!
+            </div>
+            <div [hidden]="!OldPassword.errors.minlength">
+              Password min length is 7 characters.
+            </div>
+            <div [hidden]="!OldPassword.errors.maxlength">
+              Password max length is 42 characters.
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+            <label for="NewPassword">New Password</label>
+            <input type="Password" placeholder="New Password" class="form-control" name="NewPassword" ngModel required minlength="7" maxlength="42" #NewPassword="ngModel">
+            <div *ngIf="NewPassword.errors && (NewPassword.dirty || NewPassword.touched)"
+             class="alert alert-danger">  
+              <div [hidden]="!NewPassword.errors.required">
+                Password is required!
+              </div>
+              <div [hidden]="!NewPassword.errors.minlength">
+                Password min length is 7 characters.
+              </div>
+              <div [hidden]="!NewPassword.errors.maxlength">
+                Password max length is 42 characters.
+              </div>
+            </div>
+          </div>
+
+    <div class="form-group">
+      <label for="ConfirmPassword">Confirm Password</label>
+      <input type="Password" placeholder="Confirm Password" class="form-control" name="ConfirmPassword" ngModel required minlength="7" maxlength="42" #ConfirmPassword="ngModel">
+      <div *ngIf="ConfirmPassword.errors && (ConfirmPassword.dirty || ConfirmPassword.touched)"
+       class="alert alert-danger">  
+        <div [hidden]="!ConfirmPassword.errors.required">
+          Password is required!
+        </div>
+        <div [hidden]="!ConfirmPassword.errors.minlength">
+          Password min length is 7 characters.
+        </div>
+        <div [hidden]="!ConfirmPassword.errors.maxlength">
+          Password max length is 42 characters.
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success" [disabled]="!forma.valid">Change Password</button>
+          </div>
+      </div>
+</form>      
