Rent for unavailable vehicle blocked

--- a/Angular/client-app/src/app/show-vehicles/show-vehicles.component.html
+++ b/Angular/client-app/src/app/show-vehicles/show-vehicles.component.html
@@ -122,7 +122,7 @@
               <div class="form-group">
                   <label class="col-md-4 control-label" for="singlebutton"></label>
                       <div class="col-md-4">
-                          <button *ngIf="this.navbarComponent.checkIfLogged() && this.navbarComponent.checkUserType()" id="singlebutton" (click)="deleteVehicle(item.id)" name="singlebutton" class="btn btn-danger">Delete Vehicle</button>
+                          <button *ngIf="this.navbarComponent.checkIfLogged() && this.navbarComponent.checkUserType()" id="singlebutton" (click)="deleteVehicle(item.Id)" name="singlebutton" class="btn btn-danger">Delete Vehicle</button>
                       </div>
               </div>
           </td>
