--- a/Angular/client-app/src/app/show-vehicles-of-service/show-vehicles-of-service.component.html
+++ b/Angular/client-app/src/app/show-vehicles-of-service/show-vehicles-of-service.component.html
@@ -117,14 +117,19 @@
         </div>
       </td>
       <td *ngFor = "let im of vehicle.Images" style="width: 250px;"><label class="col-md-4 control-label">Slike</label><img width="200" src='{{im}}' /></td>
-      <td>
-          
-        <div class="form-group">
+      <td>  
+        <div  class="form-group" *ngIf="!checkVehicleAvailability(ii)">
             <label class="col-md-4 control-label" for="singlebutton"></label>
                 <div class="col-md-4">
                     <a [routerLink]="['/rentVehicle/' + vehicle.Id]">Rent Vehicle</a>
                 </div>
         </div>
+        <div  class="form-group" *ngIf="checkVehicleAvailability(ii)">
+          <label class="col-md-4 control-label" for="singlebutton"></label>
+              <div class="col-md-4">
+                  <span>Vehicle is unavailable at this moment!</span>
+              </div>
+      </div>
     </td>
       
       
