--- a/Angular/client-app/src/app/show-services/show-services.component.html
+++ b/Angular/client-app/src/app/show-services/show-services.component.html
@@ -109,3 +109,12 @@
     </form>
   </tbody>
 </table>
+
+<table align="center">
+  <tr>
+    <td align="center"><a style="font-size: 50px;text-align:center" (click)="setPageNumber(1)">1    </a></td>
+    <td align="center"><a style="font-size: 50px;text-align:center" (click)="setPageNumber(2)">2    </a></td>
+    <td align="center"><a style="font-size: 50px;text-align:center" (click)="setPageNumber(3)">3    </a></td>
+    <td align="center"><a style="font-size: 50px;text-align:center" (click)="incPageNumber()"> Next Page</a></td>
+  </tr>
+</table>
